Update forecast, about, help and add img

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/pic1.png">
+        <p>This is website is giving information about the current status of your search location</p>
+        <img class="portrait" src="/img/pic2.jpg">
     </div>
 
     {{>footer}}
