--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
         {{>header}}
         <p>{{message}}</p>
+        <img src="/img/pic3.png">
     </div>
 
     {{>footer}}
